--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
                 <td id="info-message">  </td>
             </tr>
         </table>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
