--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-    <!doctype html>
-    <head>
-        <title>
-            Drow Syscro
-        </title>
-    </head>
-    <body>
-        <table>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <table>
             <tr>
                 <td id="new-game">New Game</td>
             </tr>
@@ -30,6 +33,6 @@
                 <td id="info-message">  </td>
             </tr>
         </table>
-        <script type="text/javascript" src="script.js"></script>
-    </body>
+    <script src="script.js"></script>
+</body>
 </html>
